--- a/Firmware/Web/main.html
+++ b/Firmware/Web/main.html
@@ -13,6 +13,7 @@
             --muted: gray;
             --secondary-background:#252526;
             --styled-border:2px solid var(--primary-highlight);
+            --primary-transition: 0.5s ease;
         }
 
         ::selection {
@@ -91,6 +92,12 @@
             box-shadow: inset var(--primary-background) 0px 5px 20px 0px;
         }
 
+        form input[type=email]:disabled, form input[type=password]:disabled {
+            opacity: 0.5;
+            cursor: not-allowed;
+            transition: var(--primary-transition) opacity;
+        }
+
         form input[type=submit] {
             text-align: center;
             align-self: center;
@@ -118,16 +125,94 @@
             transform: translateY(-5px);
             box-shadow: black 0px 5px 15px;
         }
+
+        form input[type=submit]:disabled {
+            opacity: 0;
+            transition: var(--primary-transition) opacity;
+        }
+
+        .spinner {
+            position: relative;
+            margin: auto;
+            text-align: center;
+            top: -2em;
+            opacity: 0;
+            visibility: hidden;
+            transition: var(--primary-transition) opacity;
+        }
+
+        .spinner.visible {
+            opacity: 1;
+            visibility: unset;
+        }
+
+        .spinner > div {
+            width: 1em;
+            height: 1em;
+            background-color: var(--primary-highlight);
+            margin: 0.25em;
+
+            border-radius: 100%;
+            display: inline-block;
+            -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+            animation: sk-bouncedelay 1.4s infinite ease-in-out both;
+        }
+
+        .spinner .bounce1 {
+            -webkit-animation-delay: -0.32s;
+            animation-delay: -0.32s;
+        }
+
+        .spinner .bounce2 {
+            -webkit-animation-delay: -0.16s;
+            animation-delay: -0.16s;
+        }
+
+        @-webkit-keyframes sk-bouncedelay {
+            0%, 80%, 100% { -webkit-transform: scale(0) }
+            40% { -webkit-transform: scale(1.0) }
+        }
+
+        @keyframes sk-bouncedelay {
+            0%, 80%, 100% { 
+                -webkit-transform: scale(0);
+                transform: scale(0);
+            } 40% { 
+                -webkit-transform: scale(1.0);
+                transform: scale(1.0);
+            }
+        }
         
     </style>
     <script>
         document.addEventListener('DOMContentLoaded', function() {
-            var formElement = document.forms.namedItem("login");
-            var submitElement = formElement.querySelector('input[type=submit]');
-            formElement.addEventListener('submit', function(ev) {
-                var formData = new FormData(formElement);
-                submitElement.blur(); //otherwise the button just kinda keeps in focus
+            var loginForm = document.forms.namedItem("login");
+            var emailElement = loginForm.querySelector('input[type=email]');
+            var passwordElement = loginForm.querySelector('input[type=password]');
+            var loginSubmitElement = loginForm.querySelector('input[type=submit]');
+            var loginSpinner = loginForm.querySelector('.spinner');
+            loginForm.addEventListener('submit', function(ev) {
+                var formData = new FormData(loginForm);
+                loginSubmitElement.blur(); //otherwise the button just kinda keeps in focus
+                emailElement.disabled = true;
+                passwordElement.disabled = true;
+                loginSubmitElement.disabled = true;
+                loginSpinner.classList.add('visible');
                 ev.preventDefault();
+
+                var xhr = new XMLHttpRequest();
+                xhr.open("POST", 'http://esp8266test.local/api/credentials', true);
+                xhr.onreadystatechange = function() { // Call a function when the state changes.
+                    if (this.readyState === XMLHttpRequest.DONE) {
+                        //loginSpinner.classList.remove('visible');
+                        if (this.status === 200) {
+                            //success
+                            console.log(xhr.responseText);
+                        }
+                    }
+                }
+                xhr.send(formData);
+
             });
         }, false);
     </script>
@@ -137,9 +222,10 @@
         <div style="margin:auto">
             <h1 class="underlined">Login.</h1>
             <form name="login" enctype="multipart/form-data" method="post">
-                <input id="username" type="email" name="username" placeholder="Email Address" autocomplete="off" spellcheck="false" class="unstyled">
-                <input id="password" type="password" name="password" placeholder="Password" autocomplete="current-password" spellcheck="false" class="unstyled">
+                <input id="username" type="email" name="username" placeholder="Email Address" autocomplete="off" spellcheck="false" class="unstyled" required>
+                <input id="password" type="password" name="password" placeholder="Password" autocomplete="current-password" spellcheck="false" class="unstyled" required>
                 <input class="unstyled" type="submit" value="Submit">
+                <div class="spinner"><div class="bounce1"></div><div class="bounce2"></div><div class="bounce3"></div></div>
             </form>
         </div>
     </div>
