--- a/Firmware/Web/main.html
+++ b/Firmware/Web/main.html
@@ -201,7 +201,7 @@
                 ev.preventDefault();
 
                 var xhr = new XMLHttpRequest();
-                xhr.open("POST", 'http://esp8266test.local/api/credentials', true);
+                xhr.open("POST", '/api/credentials', true);
                 xhr.onreadystatechange = function() { // Call a function when the state changes.
                     if (this.readyState === XMLHttpRequest.DONE) {
                         //loginSpinner.classList.remove('visible');
