Generate content with cliento.js

--- a/Firmware/Web/main.html
+++ b/Firmware/Web/main.html
@@ -1,290 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Device Homepage</title>
-    <style>
-        :root {
-            --primary-background: #1E1E1E;
-            --primary-highlight: lightgrey;
-            --spotlight: hsl(210deg 49% 71% / 60%);
-            --muted: gray;
-            --secondary-background: #252526;
-            --styled-border: 2px solid var(--primary-highlight);
-            --primary-transition: 0.5s ease;
-        }
-
-        ::selection {
-            background: var(--primary-highlight);
-            /* WebKit/Blink Browsers */
-        }
-
-        input[type="password"]::-ms-reveal,
-        input[type="password"]::-ms-clear {
-            filter: invert(50%);
-        }
-
-        html {
-            height: 100vh;
-            width: 100vw;
-            color: var(--primary-highlight);
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-        }
-
-        body {
-            display: flex;
-            margin: 0;
-            height: 100%;
-            background: radial-gradient(ellipse at top left, var(--spotlight), var(--primary-background)), url(https://www.transparenttextures.com/patterns/brushed-alum.png);
-            background-blend-mode: hard-light;
-        }
-
-        h1 {
-            display: flex;
-            justify-content: center;
-            height: auto;
-            width: auto;
-            font-size: xxx-large;
-        }
-
-        form {
-            display: flex;
-            flex-direction: column;
-        }
-
-        .underlined {
-            padding-bottom: 5px;
-            border-bottom: var(--styled-border);
-        }
-
-        .unstyled {
-            -webkit-appearance: none;
-            outline: none;
-            color: inherit;
-        }
-
-        .window {
-            display: flex;
-            align-items: center;
-            flex-direction: column;
-            height: 33vw;
-            width: 33vw;
-            margin: auto;
-            background: radial-gradient(ellipse at top left, hsl(0deg 0% 27%), var(--secondary-background));
-            background-color: var(--secondary-background);
-            border: var(--styled-border);
-            border-radius: 1em;
-            box-shadow: black 0px 10px 30px;
-            min-width: 20em;
-            min-height: 20em;
-        }
-
-        .centerizer {
-            margin: auto;
-            transition: var(--primary-transition) opacity, var(--primary-transition) visibility;
-            position: absolute;
-            top: 50%;
-            transform: translateY(-50%);
-            opacity: 0;
-            visibility: hidden;
-        }
-
-        .centerizer.active {
-            opacity: 1;
-            visibility: unset;
-        }
-
-        form fieldset {
-            display: flex;
-            flex-direction: column;
-            margin: unset;
-            padding: unset;
-            border: unset;
-        }
-
-        form input[type=email],
-        form input[type=password],
-        form select {
-            text-align: center;
-            align-self: center;
-            font-size: larger;
-            height: 2em;
-            background-color: #1E1E1E88;
-            margin-bottom: 1em;
-            -webkit-text-fill-color: var(--muted);
-            border: none;
-            /*border: 2px solid var(--primary-highlight);*/
-            box-shadow: inset var(--primary-background) 0px 5px 20px 0px;
-        }
-
-        form input[type=email]:disabled,
-        form input[type=password]:disabled,
-        form select:disabled {
-            opacity: 0.5;
-            cursor: not-allowed;
-            transition: var(--primary-transition) opacity;
-        }
-
-        form input[type=submit] {
-            text-align: center;
-            align-self: center;
-            font-size: larger;
-            height: 2em;
-            background-color: transparent;
-            border: var(--styled-border);
-            width: -webkit-fill-available;
-            border-radius: 1em;
-            cursor: pointer;
-            transition: all 0.25s ease;
-        }
-
-
-        form input[type=submit]:hover,
-        form input[type=submit]:focus {
-            color: var(--primary-background);
-            background-color: var(--primary-highlight);
-            transform: translateY(-10px);
-            box-shadow: black 0px 10px 30px;
-        }
-
-        form input[type=submit]:active {
-            color: var(--primary-background);
-            background-color: var(--primary-highlight);
-            transform: translateY(-5px);
-            box-shadow: black 0px 5px 15px;
-        }
-
-        form input[type=submit]:disabled {
-            opacity: 0;
-            transition: var(--primary-transition) opacity;
-        }
-
-        form select {
-            -webkit-appearance: auto!important;
-            width: -webkit-fill-available;
-            text-align-last: center;
-        }
-
-        form select option:hover {
-            background-color: var(--primary-background);
-        }
-
-        form label {
-            font-size: x-large;
-            text-align: center;
-        }
-
-        .spinner {
-            position: relative;
-            margin: auto;
-            text-align: center;
-            top: -2em;
-            opacity: 0;
-            visibility: hidden;
-            transition: var(--primary-transition) opacity;
-        }
-
-        form fieldset:disabled>.spinner {
-            opacity: 1;
-            visibility: unset;
-        }
-
-        .spinner>div {
-            width: 1em;
-            height: 1em;
-            background-color: var(--primary-highlight);
-            margin: 0.25em;
-
-            border-radius: 100%;
-            display: inline-block;
-            -webkit-animation: sk-bouncedelay 1.4s infinite ease-in-out both;
-            animation: sk-bouncedelay 1.4s infinite ease-in-out both;
-        }
-
-        .spinner .bounce1 {
-            -webkit-animation-delay: -0.32s;
-            animation-delay: -0.32s;
-        }
-
-        .spinner .bounce2 {
-            -webkit-animation-delay: -0.16s;
-            animation-delay: -0.16s;
-        }
-
-        @-webkit-keyframes sk-bouncedelay {
-
-            0%,
-            80%,
-            100% {
-                -webkit-transform: scale(0)
-            }
-
-            40% {
-                -webkit-transform: scale(1.0)
-            }
-        }
-
-        @keyframes sk-bouncedelay {
-
-            0%,
-            80%,
-            100% {
-                -webkit-transform: scale(0);
-                transform: scale(0);
-            }
-
-            40% {
-                -webkit-transform: scale(1.0);
-                transform: scale(1.0);
-            }
-        }
-    </style>
+    <base href="../cdn/">
+    <link rel="stylesheet" href="main.css">
+    <script src="cliento.js"></script>
+    <script src="main.js"></script>
 </head>
-
 <body>
-    <div class="window">
-        <div class="centerizer active">
-            <h1 class="underlined">Login.</h1>
-            <form name="login">
-                <fieldset>
-                    <input id="username" type="email" name="username" placeholder="Email Address" autocomplete="email"
-                        spellcheck="false" class="unstyled" required>
-                    <input id="password" type="password" name="password" placeholder="Password"
-                        autocomplete="current-password" spellcheck="false" class="unstyled" required>
-                    <input class="unstyled" type="submit" value="Submit">
-                    <div class="spinner">
-                        <div class="bounce1"></div>
-                        <div class="bounce2"></div>
-                        <div class="bounce3"></div>
-                    </div>
-                </fieldset>
-            </form>
-        </div>
-        <div class="centerizer">
-            <h1 class="underlined">Assign Outlets.</h1>
-            <form name="devices">
-                <fieldset>
-                    <label for="top">Top Outlet:</label>
-                    <select name="top" id="topOutlet" class="unstyled">
-                        <option value="none" selected disabled hidden>Choose an Outlet</option>
-                    </select>
-                    <label for="bottom">Bottom Outlet:</label>
-                    <select name="bottom" id="bottomOutlet" class="unstyled">
-                        <option value="none" selected disabled hidden>Choose an Outlet</option>
-                    </select>
-                    <input class="unstyled" type="submit" value="Apply">
-                    <div class="spinner">
-                        <div class="bounce1"></div>
-                        <div class="bounce2"></div>
-                        <div class="bounce3"></div>
-                    </div>
-                </fieldset>
-            </form>
-        </div>
-    </div>
+
 </body>
 
 </html>
