--- a/Firmware/Web/main.html
+++ b/Firmware/Web/main.html
@@ -1,17 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Device Homepage</title>
-    <base href="../cdn/">
-    <link rel="stylesheet" href="main.css">
-    <script src="cliento.js"></script>
-    <script src="main.js"></script>
-</head>
-<body>
-
-</body>
-
-</html>
+<!DOCTYPE html><html lang=\"en\"><head><meta charset=\"UTF-8\"><meta http-equiv=\"X-UA-Compatible\" content=\"IE=edge\"><meta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\"><title>Device Homepage</title><base href=\"https://cdn.jsdelivr.net/gh/christian-kramer/Workbench-Light-Controller/Firmware/Web/\"><link rel=\"stylesheet\" href=\"main.css\"><script src=\"cliento.js\"></script><script src=\"main.js\"></script></head><body></body></html>
